@@ -8,6 +8,7 @@ t/tempfile.t
 t/security.t
 t/object.t
 t/seekable.t
+t/cmp.t
 ChangeLog
 misc/benchmark.pl
 misc/results.txt
